--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/fish-chaun/Big_pieapple_software#readme",
   "dependencies": {
+    "fs": "0.0.1-security",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "mongoose": "^5.8.2"
+    "mongoose": "^5.8.2",
+    "path": "^0.12.7"
   }
 }
