--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mongoose": "^5.8.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
     "socket.io": "^2.3.0"
   }
 }
